python_ffi/lotrc.h


typedef struct ref_slice_u8 {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u8;
typedef uint32_t u32_le;
typedef u32_le u32Pc;
typedef struct slice_string {
  uint64_t align;
  uint8_t pad[8];
} slice_string;
typedef uint16_t u16_le;
typedef u16_le u16Pc;
typedef struct string {
  uint64_t align;
  uint8_t pad[8];
} string;
typedef struct ref_slice_u16Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_u16Pc;
typedef u32Pc CrcPc;
typedef uint8_t u8Pc;
typedef float f32_le;
typedef f32_le f32Pc;
typedef int32_t i32_le;
typedef i32_le i32Pc;
typedef struct Vector3Pc {
  f32Pc x;
  f32Pc y;
  f32Pc z;
} Vector3Pc;
typedef struct ref_slice_CrcPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_CrcPc;
typedef struct ref_slice_i32Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_i32Pc;
typedef struct ref_slice_Matrix4x4Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Matrix4x4Pc;
typedef struct Vector2Pc {
  f32Pc x;
  f32Pc y;
} Vector2Pc;
typedef struct Vector4Pc {
  f32Pc x;
  f32Pc y;
  f32Pc z;
  f32Pc w;
} Vector4Pc;
typedef struct Matrix4x4Pc {
  struct Vector4Pc x;
  struct Vector4Pc y;
  struct Vector4Pc z;
  struct Vector4Pc w;
} Matrix4x4Pc;
typedef struct ref_slice_U32Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_U32Pc;
typedef struct ref_slice_Vector4Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Vector4Pc;
typedef struct ref_slice_WeightPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_WeightPc;
typedef enum BaseTypeRefPc_Tag BaseTypeRefPc_Tag;
typedef uint8_t BaseTypeRefPc_Tag;
typedef struct BaseTypeRefPc {
  BaseTypeRefPc_Tag tag;
  union {
    struct {
      const CrcPc *crc;
    };
    struct {
      const u32Pc *guid;
    };
    struct {
      const u32Pc *color;
    };
    struct {
      const struct Vector2Pc *vector2;
    };
    struct {
      const struct Vector3Pc *vector3;
    };
    struct {
      const struct Vector4Pc *vector4;
    };
    struct {
      const struct Matrix4x4Pc *matrix4x4;
    };
    struct {
      const f32Pc *float_;
    };
    struct {
      const i32Pc *int_;
    };
    struct {
      const u32Pc *bool_;
    };
    struct {
      struct string string;
    };
    struct {
      struct slice_string string_list;
    };
    struct {
      struct ref_slice_U32Pc object_list;
    };
    struct {
      struct ref_slice_Vector4Pc node_list;
    };
    struct {
      struct ref_slice_i32Pc int_list;
    };
    struct {
      struct ref_slice_U32Pc crc_list;
    };
    struct {
      struct ref_slice_WeightPc weight_list;
    };
    struct {
      struct ref_slice_Matrix4x4Pc matrix_list;
    };
  };
} BaseTypeRefPc;
typedef struct BlockHeader1Pc {
  u32Pc a;
  u32Pc b;
  u32Pc unk_2;
  u32Pc unk_3;
} BlockHeader1Pc;
typedef struct BlockHeader2Pc {
  u32Pc n;
  f32Pc unk_1;
  f32Pc unk_2;
  u32Pc unk_3;
  u32Pc unk_4;
} BlockHeader2Pc;
typedef struct ref_slice_BlockValAPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BlockValAPc;
typedef struct ref_slice_BlockValBPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_BlockValBPc;
typedef struct BlockRefPc {
  const struct BlockHeader1Pc *info1;
  const struct BlockHeader2Pc *info2;
  struct ref_slice_BlockValAPc vals_a;
  struct ref_slice_BlockValAPc vals_b;
  struct ref_slice_BlockValBPc vals_c;
  struct ref_slice_u8 pad;
} BlockRefPc;
typedef struct ShapeInfoPc {
  u32Pc offset;
  u32Pc kind;
  u32Pc unk_2;
  f32Pc unk_3;
  f32Pc unk_4;
  f32Pc unk_5;
  struct Vector3Pc translation;
  struct Vector4Pc rotation;
  f32Pc unk_13;
  f32Pc unk_14;
  f32Pc unk_15;
  f32Pc unk_16;
  f32Pc unk_17;
  f32Pc unk_18;
  f32Pc unk_19;
  f32Pc unk_20;
  f32Pc unk_21;
  f32Pc unk_22;
  f32Pc unk_23;
  f32Pc unk_24;
  f32Pc unk_25;
  f32Pc unk_26;
  u32Pc hk_shape_num;
  u32Pc hk_shape_offset;
  u8Pc unk_29a;
  u8Pc unk_29b;
  u8Pc unk_29c;
  u8Pc unk_29d;
  f32Pc unk_30;
} ShapeInfoPc;
typedef struct Option_ShapeExtraRefPc {
  uint64_t align;
  uint8_t pad[32];
} Option_ShapeExtraRefPc;
typedef struct slice_HkShapeRefPc {
  uint64_t align;
  uint8_t pad[8];
} slice_HkShapeRefPc;
typedef struct ShapeRefPc {
  const struct ShapeInfoPc *info;
  struct Option_ShapeExtraRefPc extra;
  struct slice_HkShapeRefPc hk_shapes;
} ShapeRefPc;
typedef struct BoxShapePc {
  struct Vector4Pc translation;
  struct Vector4Pc rotation;
  u32Pc kind;
  CrcPc key;
  struct Vector3Pc half_extents;
  u32Pc unk_13;
  u32Pc unk_14;
  f32Pc unk_15;
  f32Pc unk_16;
  f32Pc unk_17;
  f32Pc unk_18;
  f32Pc unk_19;
} BoxShapePc;
typedef struct SphereShapePc {
  struct Vector4Pc translation;
  struct Vector4Pc rotation;
  u32Pc kind;
  CrcPc key;
  f32Pc radius;
  u32Pc unk_11;
  f32Pc unk_12;
  f32Pc unk_13;
  f32Pc unk_14;
  f32Pc unk_15;
  f32Pc unk_16;
  f32Pc unk_17;
  f32Pc unk_18;
  f32Pc unk_19;
} SphereShapePc;
typedef struct CapsuleShapePc {
  struct Vector4Pc translation;
  struct Vector4Pc rotation;
  u32Pc kind;
  CrcPc key;
  struct Vector3Pc point1;
  struct Vector3Pc point2;
  f32Pc radius;
  f32Pc unk_17;
  f32Pc unk_18;
  f32Pc unk_19;
} CapsuleShapePc;
typedef struct CylinderShapePc {
  struct Vector4Pc translation;
  struct Vector4Pc rotation;
  u32Pc kind;
  CrcPc key;
  struct Vector3Pc point1;
  struct Vector3Pc point2;
  f32Pc radius;
  f32Pc unk_17;
  f32Pc unk_18;
  f32Pc unk_19;
} CylinderShapePc;
typedef struct ConvexVerticesInfoPc {
  struct Vector4Pc translation;
  struct Vector4Pc rotation;
  u32Pc kind;
  CrcPc key;
  u32Pc norm_num;
  u32Pc norms_offset;
  u32Pc vert_num;
  u32Pc verts_offset;
  f32Pc unk_14;
  f32Pc unk_15;
  f32Pc unk_16;
  f32Pc unk_17;
  f32Pc unk_18;
  f32Pc unk_19;
} ConvexVerticesInfoPc;
typedef struct ref_slice_Vector3Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_Vector3Pc;
typedef struct ConvexVerticesRefPc {
  const struct ConvexVerticesInfoPc *info;
  struct ref_slice_Vector4Pc norms;
  struct ref_slice_Vector3Pc verts;
} ConvexVerticesRefPc;
typedef struct BVTreeMeshInfoPc {
  struct Vector4Pc translation;
  struct Vector4Pc rotation;
  u32Pc kind;
  CrcPc key;
  struct Vector3Pc offset;
  f32Pc tree_scale;
  u32Pc tree_size;
  u32Pc tree_offset;
  u32Pc vert_num;
  u32Pc verts_offset;
  u32Pc tri_num;
  u32Pc inds_offset;
} BVTreeMeshInfoPc;
typedef struct BVTreeMeshRefPc {
  const struct BVTreeMeshInfoPc *info;
  struct ref_slice_u8 tree;
  struct ref_slice_Vector3Pc verts;
  struct ref_slice_u16Pc inds;
} BVTreeMeshRefPc;
typedef struct HkShapeInfoPc {
  struct Vector4Pc unk_0;
  struct Vector4Pc unk_4;
  u32Pc kind;
  u32Pc unk_9;
  u32Pc unk_10;
  u32Pc unk_11;
  u32Pc unk_12;
  u32Pc unk_13;
  u32Pc unk_14;
  u32Pc unk_15;
  u32Pc unk_16;
  u32Pc unk_17;
  u32Pc unk_18;
  u32Pc unk_19;
} HkShapeInfoPc;
typedef enum HkShapeRefPc_Tag HkShapeRefPc_Tag;
typedef uint8_t HkShapeRefPc_Tag;
typedef struct HkShapeRefPc {
  HkShapeRefPc_Tag tag;
  union {
    struct {
      const struct BoxShapePc *box;
    };
    struct {
      const struct SphereShapePc *sphere;
    };
    struct {
      const struct CapsuleShapePc *capsule;
    };
    struct {
      const struct CylinderShapePc *cylinder;
    };
    struct {
      struct ConvexVerticesRefPc convex_vertices;
    };
    struct {
      struct BVTreeMeshRefPc bv_tree_mesh;
    };
    struct {
      const struct HkShapeInfoPc *unknown;
    };
  };
} HkShapeRefPc;
typedef struct FoliageInfoPc {
  CrcPc key;
  u32Pc kind;
  i32Pc lb_w;
  i32Pc lb_h;
  i32Pc ub_w;
  i32Pc ub_h;
  f32Pc scale;
  u32Pc offset;
  CrcPc key_mesh;
  CrcPc key_mesh_lod1;
  CrcPc key_mesh_lod2;
  struct Vector4Pc color;
  f32Pc lod1a;
  f32Pc lod1b;
  f32Pc lod2a;
  f32Pc lod2b;
  f32Pc lod_max;
} FoliageInfoPc;
typedef struct ref_slice_FoliageValPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_FoliageValPc;
typedef struct FoliageRefPc {
  const struct FoliageInfoPc *info;
  struct ref_slice_FoliageValPc vals;
} FoliageRefPc;
typedef struct slice_BlockValARefPc {
  uint64_t align;
  uint8_t pad[8];
} slice_BlockValARefPc;
typedef struct slice_Obj1RefPc {
  uint64_t align;
  uint8_t pad[8];
} slice_Obj1RefPc;
typedef struct BlockValRefPc {
  struct slice_BlockValARefPc vals_a;
  struct slice_Obj1RefPc vals_b;
} BlockValRefPc;
typedef struct slice_BlockValRefPc {
  uint64_t align;
  uint8_t pad[8];
} slice_BlockValRefPc;
typedef struct CrowdItemHeaderPc {
  CrcPc key;
  CrcPc key_main;
  CrcPc key_right;
  CrcPc key_left;
  f32Pc unk_4;
  u32Pc animation_num;
  u32Pc instance_num;
} CrowdItemHeaderPc;
typedef struct ref_slice_CrowdValPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_CrowdValPc;
typedef struct CrowdItemRefPc {
  const struct CrowdItemHeaderPc *header;
  struct ref_slice_CrcPc animations;
  struct ref_slice_CrowdValPc instances;
} CrowdItemRefPc;
typedef struct slice_CrowdItemRefPc {
  uint64_t align;
  uint8_t pad[8];
} slice_CrowdItemRefPc;
typedef struct HkConstraintBoneRefPc {
  struct string name;
  u32Pc start;
  u32Pc val;
} HkConstraintBoneRefPc;
typedef struct slice_HkConstraintBoneRefPc {
  uint64_t align;
  uint8_t pad[8];
} slice_HkConstraintBoneRefPc;
typedef struct ref_slice_f32Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_f32Pc;
typedef enum AnimVals1RefPc_Tag AnimVals1RefPc_Tag;
typedef uint8_t AnimVals1RefPc_Tag;
typedef struct AnimVals1RefPc {
  AnimVals1RefPc_Tag tag;
  union {
    struct {
      struct ref_slice_u8 type1;
    };
    struct {
      struct ref_slice_u16Pc type2;
    };
    struct {
      struct ref_slice_u16Pc type3;
    };
    struct {
      struct ref_slice_u16Pc type4;
    };
  };
} AnimVals1RefPc;
typedef struct Obj1RefPc {
  uint8_t flags;
  uint8_t s2;
  u16Pc s1;
  struct ref_slice_u8 data;
  struct ref_slice_f32Pc vals_a;
  struct AnimVals1RefPc vals;
  uintptr_t size;
} Obj1RefPc;
typedef struct ref_slice_RotationPolar32Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RotationPolar32Pc;
typedef struct ref_slice_RotationThreeComp40Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RotationThreeComp40Pc;
typedef struct ref_slice_RotationThreeComp48Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RotationThreeComp48Pc;
typedef struct ref_slice_RotationThreeComp24Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RotationThreeComp24Pc;
typedef struct ref_slice_RotationStraight16Pc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RotationStraight16Pc;
typedef struct ref_slice_RotationUncompressedPc {
  uint64_t align;
  uint8_t pad[8];
} ref_slice_RotationUncompressedPc;
typedef enum RotationQuantizationRefPc_Tag RotationQuantizationRefPc_Tag;
typedef uint8_t RotationQuantizationRefPc_Tag;