python_ffi/lotrc_rs.pxd


  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_U32Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_Vector4Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_WeightPc:
    uint64_t align;
    uint8_t pad[8];

  cdef enum:
    BaseTypeRefPc_Crc,
    BaseTypeRefPc_GUID,
    BaseTypeRefPc_Color,
    BaseTypeRefPc_Vector2,
    BaseTypeRefPc_Vector3,
    BaseTypeRefPc_Vector4,
    BaseTypeRefPc_Matrix4x4,
    BaseTypeRefPc_Float,
    BaseTypeRefPc_Int,
    BaseTypeRefPc_Bool,
    BaseTypeRefPc_String,
    BaseTypeRefPc_StringList,
    BaseTypeRefPc_ObjectList,
    BaseTypeRefPc_NodeList,
    BaseTypeRefPc_IntList,
    BaseTypeRefPc_CrcList,
    BaseTypeRefPc_WeightList,
    BaseTypeRefPc_MatrixList,
  ctypedef uint8_t BaseTypeRefPc_Tag;

  cdef struct BaseTypeRefPc:
    BaseTypeRefPc_Tag tag;
    const CrcPc *crc;
    const u32Pc *guid;
    const u32Pc *color;
    const Vector2Pc *vector2;
    const Vector3Pc *vector3;
    const Vector4Pc *vector4;
    const Matrix4x4Pc *matrix4x4;
    const f32Pc *float_;
    const i32Pc *int_;
    const u32Pc *bool_;
    string string;
    slice_string string_list;
    ref_slice_U32Pc object_list;
    ref_slice_Vector4Pc node_list;
    ref_slice_i32Pc int_list;
    ref_slice_U32Pc crc_list;
    ref_slice_WeightPc weight_list;
    ref_slice_Matrix4x4Pc matrix_list;

  #gen_ffi:export
  cdef struct BlockHeader1Pc:
    u32Pc a;
    u32Pc b;
    u32Pc unk_2;
    u32Pc unk_3;

  #gen_ffi:export
  cdef struct BlockHeader2Pc:
    u32Pc n;
    f32Pc unk_1;
    f32Pc unk_2;
    u32Pc unk_3;
    u32Pc unk_4;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_BlockValAPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_BlockValBPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct BlockRefPc:
    const BlockHeader1Pc *info1;
    const BlockHeader2Pc *info2;
    ref_slice_BlockValAPc vals_a;
    ref_slice_BlockValAPc vals_b;
    ref_slice_BlockValBPc vals_c;
    ref_slice_u8 pad;

  #gen_ffi:export
  cdef struct ShapeInfoPc:
    u32Pc offset;
    u32Pc kind;
    u32Pc unk_2;
    f32Pc unk_3;
    f32Pc unk_4;
    f32Pc unk_5;
    Vector3Pc translation;
    Vector4Pc rotation;
    f32Pc unk_13;
    f32Pc unk_14;
    f32Pc unk_15;
    f32Pc unk_16;
    f32Pc unk_17;
    f32Pc unk_18;
    f32Pc unk_19;
    f32Pc unk_20;
    f32Pc unk_21;
    f32Pc unk_22;
    f32Pc unk_23;
    f32Pc unk_24;
    f32Pc unk_25;
    f32Pc unk_26;
    u32Pc hk_shape_num;
    u32Pc hk_shape_offset;
    u8Pc unk_29a;
    u8Pc unk_29b;
    u8Pc unk_29c;
    u8Pc unk_29d;
    f32Pc unk_30;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct Option_ShapeExtraRefPc:
    uint64_t align;
    uint8_t pad[32];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_HkShapeRefPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct ShapeRefPc:
    const ShapeInfoPc *info;
    Option_ShapeExtraRefPc extra;
    slice_HkShapeRefPc hk_shapes;

  #gen_ffi:export
  cdef struct BoxShapePc:
    Vector4Pc translation;
    Vector4Pc rotation;
    u32Pc kind;
    CrcPc key;
    Vector3Pc half_extents;
    u32Pc unk_13;
    u32Pc unk_14;
    f32Pc unk_15;
    f32Pc unk_16;
    f32Pc unk_17;
    f32Pc unk_18;
    f32Pc unk_19;

  #gen_ffi:export
  cdef struct SphereShapePc:
    Vector4Pc translation;
    Vector4Pc rotation;
    u32Pc kind;
    CrcPc key;
    f32Pc radius;
    u32Pc unk_11;
    f32Pc unk_12;
    f32Pc unk_13;
    f32Pc unk_14;
    f32Pc unk_15;
    f32Pc unk_16;
    f32Pc unk_17;
    f32Pc unk_18;
    f32Pc unk_19;

  #gen_ffi:export
  cdef struct CapsuleShapePc:
    Vector4Pc translation;
    Vector4Pc rotation;
    u32Pc kind;
    CrcPc key;
    Vector3Pc point1;
    Vector3Pc point2;
    f32Pc radius;
    f32Pc unk_17;
    f32Pc unk_18;
    f32Pc unk_19;

  #gen_ffi:export
  cdef struct CylinderShapePc:
    Vector4Pc translation;
    Vector4Pc rotation;
    u32Pc kind;
    CrcPc key;
    Vector3Pc point1;
    Vector3Pc point2;
    f32Pc radius;
    f32Pc unk_17;
    f32Pc unk_18;
    f32Pc unk_19;

  #gen_ffi:export
  cdef struct ConvexVerticesInfoPc:
    Vector4Pc translation;
    Vector4Pc rotation;
    u32Pc kind;
    CrcPc key;
    u32Pc norm_num;
    u32Pc norms_offset;
    u32Pc vert_num;
    u32Pc verts_offset;
    f32Pc unk_14;
    f32Pc unk_15;
    f32Pc unk_16;
    f32Pc unk_17;
    f32Pc unk_18;
    f32Pc unk_19;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_Vector3Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct ConvexVerticesRefPc:
    const ConvexVerticesInfoPc *info;
    ref_slice_Vector4Pc norms;
    ref_slice_Vector3Pc verts;

  #gen_ffi:export
  cdef struct BVTreeMeshInfoPc:
    Vector4Pc translation;
    Vector4Pc rotation;
    u32Pc kind;
    CrcPc key;
    Vector3Pc offset;
    f32Pc tree_scale;
    u32Pc tree_size;
    u32Pc tree_offset;
    u32Pc vert_num;
    u32Pc verts_offset;
    u32Pc tri_num;
    u32Pc inds_offset;

  cdef struct BVTreeMeshRefPc:
    const BVTreeMeshInfoPc *info;
    ref_slice_u8 tree;
    ref_slice_Vector3Pc verts;
    ref_slice_u16Pc inds;

  #gen_ffi:export
  cdef struct HkShapeInfoPc:
    Vector4Pc unk_0;
    Vector4Pc unk_4;
    u32Pc kind;
    u32Pc unk_9;
    u32Pc unk_10;
    u32Pc unk_11;
    u32Pc unk_12;
    u32Pc unk_13;
    u32Pc unk_14;
    u32Pc unk_15;
    u32Pc unk_16;
    u32Pc unk_17;
    u32Pc unk_18;
    u32Pc unk_19;

  cdef enum:
    HkShapeRefPc_Box,
    HkShapeRefPc_Sphere,
    HkShapeRefPc_Capsule,
    HkShapeRefPc_Cylinder,
    HkShapeRefPc_ConvexVertices,
    HkShapeRefPc_BVTreeMesh,
    HkShapeRefPc_Unknown,
  ctypedef uint8_t HkShapeRefPc_Tag;

  cdef struct HkShapeRefPc:
    HkShapeRefPc_Tag tag;
    const BoxShapePc *box;
    const SphereShapePc *sphere;
    const CapsuleShapePc *capsule;
    const CylinderShapePc *cylinder;
    ConvexVerticesRefPc convex_vertices;
    BVTreeMeshRefPc bv_tree_mesh;
    const HkShapeInfoPc *unknown;

  #gen_ffi:export
  cdef struct FoliageInfoPc:
    CrcPc key;
    u32Pc kind;
    i32Pc lb_w;
    i32Pc lb_h;
    i32Pc ub_w;
    i32Pc ub_h;
    f32Pc scale;
    u32Pc offset;
    CrcPc key_mesh;
    CrcPc key_mesh_lod1;
    CrcPc key_mesh_lod2;
    Vector4Pc color;
    f32Pc lod1a;
    f32Pc lod1b;
    f32Pc lod2a;
    f32Pc lod2b;
    f32Pc lod_max;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_FoliageValPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct FoliageRefPc:
    const FoliageInfoPc *info;
    ref_slice_FoliageValPc vals;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_BlockValARefPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_Obj1RefPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct BlockValRefPc:
    slice_BlockValARefPc vals_a;
    slice_Obj1RefPc vals_b;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_BlockValRefPc:
    uint64_t align;
    uint8_t pad[8];

  #gen_ffi:export
  cdef struct CrowdItemHeaderPc:
    CrcPc key;
    CrcPc key_main;
    CrcPc key_right;
    CrcPc key_left;
    f32Pc unk_4;
    u32Pc animation_num;
    u32Pc instance_num;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_CrowdValPc:
    uint64_t align;
    uint8_t pad[8];

  cdef struct CrowdItemRefPc:
    const CrowdItemHeaderPc *header;
    ref_slice_CrcPc animations;
    ref_slice_CrowdValPc instances;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_CrowdItemRefPc:
    uint64_t align;
    uint8_t pad[8];

  #gen_ffi:export
  cdef struct HkConstraintBoneRefPc:
    string name;
    u32Pc start;
    u32Pc val;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct slice_HkConstraintBoneRefPc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_f32Pc:
    uint64_t align;
    uint8_t pad[8];

  cdef enum:
    AnimVals1RefPc_Type1,
    AnimVals1RefPc_Type2,
    AnimVals1RefPc_Type3,
    AnimVals1RefPc_Type4,
  ctypedef uint8_t AnimVals1RefPc_Tag;

  cdef struct AnimVals1RefPc:
    AnimVals1RefPc_Tag tag;
    ref_slice_u8 type1;
    ref_slice_u16Pc type2;
    ref_slice_u16Pc type3;
    ref_slice_u16Pc type4;

  cdef struct Obj1RefPc:
    uint8_t flags;
    uint8_t s2;
    u16Pc s1;
    ref_slice_u8 data;
    ref_slice_f32Pc vals_a;
    AnimVals1RefPc vals;
    uintptr_t size;

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RotationPolar32Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RotationThreeComp40Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RotationThreeComp48Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RotationThreeComp24Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RotationStraight16Pc:
    uint64_t align;
    uint8_t pad[8];

  # This is a proxy struct for correct size and alignment only
  # don't construct this directly and use the provided methods to access
  cdef struct ref_slice_RotationUncompressedPc:
    uint64_t align;
    uint8_t pad[8];

  cdef enum:
    RotationQuantizationRefPc_Polar32,
    RotationQuantizationRefPc_ThreeComp40,
    RotationQuantizationRefPc_ThreeComp48,
    RotationQuantizationRefPc_ThreeComp24,
    RotationQuantizationRefPc_Straight16,
    RotationQuantizationRefPc_Uncompressed,
  ctypedef uint8_t RotationQuantizationRefPc_Tag;
